--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,50 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>KUSUMA AI</title>
 <style>
+  /* ======= Tema Galaxy ======= */
   :root{
-    --bg:#0d1117; --panel:#161b22; --text:#e6edf3;
-    --bubble-ai:#238636; --bubble-user:#005cc5;
-    --glow:#00f0ff; --shadow:0 10px 30px rgba(0,0,0,.35);
+    --bg:#000010; --panel:rgba(20,20,35,0.9); --text:#e6edf3;
+    --bubble-ai:#6f42c1; --bubble-user:#1e90ff;
+    --glow:#8a2be2; --shadow:0 10px 30px rgba(0,0,0,.45);
   }
-  body.light{
-    --bg:#f5f7fb; --panel:#ffffff; --text:#0f172a;
-    --bubble-ai:#d1f7d1; --bubble-user:#b0d8ff;
-    --glow:#0077ff;
-  }
-  *{box-sizing:border-box}
   body{
     margin:0; font-family:Poppins,system-ui,Segoe UI,Roboto,Arial;
     height:100vh; display:flex; flex-direction:column;
-    background: var(--bg); color:var(--text);
+    background: radial-gradient(circle at 20% 30%, #1a0033, #000010 70%),
+                url("https://www.transparenttextures.com/patterns/stardust.png");
+    color:var(--text);
     overflow:hidden;
   }
 
+  /* ======= Sidebar ======= */
+  #sidebar{
+    position:fixed; top:0; left:-240px; width:220px; height:100%;
+    background:var(--panel); box-shadow:2px 0 20px rgba(0,0,0,.6);
+    transition:0.3s ease; padding:20px; z-index:1001;
+    display:flex; flex-direction:column; gap:16px;
+  }
+  #sidebar.active{left:0;}
+  #sidebar h2{margin:0 0 20px; text-align:center; color:#fff; text-shadow:0 0 10px var(--glow);}
+  #sidebar button{
+    padding:12px; border:none; border-radius:10px; margin:4px 0;
+    background:var(--glow); color:#fff; font-weight:600; cursor:pointer;
+    box-shadow:0 0 14px var(--glow);
+  }
+
+  /* ======= Header ======= */
   header{
     position:sticky; top:0; z-index:10;
-    display:flex; align-items:center; justify-content:space-between;
-    background:linear-gradient(90deg, rgba(0,0,0,.25), rgba(0,0,0,.05));
-    padding:14px 16px; backdrop-filter: blur(6px); border-bottom:1px solid rgba(255,255,255,.06);
+    display:flex; align-items:center; justify-content:flex-start;
+    background:rgba(0,0,0,.4); padding:14px 16px; backdrop-filter: blur(6px);
   }
-  .brand{display:flex; align-items:center; gap:10px}
-  .neon-ring{
-    width:46px; height:46px; border-radius:50%;
-    padding:3px; background: conic-gradient(from 0deg, var(--glow), transparent 60%, var(--glow));
-    box-shadow:0 0 14px var(--glow);
-  }
-  .neon-ring img{width:100%; height:100%; border-radius:50%}
-  h1{font-size:20px; margin:0; text-shadow:0 0 14px var(--glow)}
+  #menuBtn{font-size:22px; cursor:pointer; background:none; border:none; color:var(--text);}
+  h1{margin-left:10px; font-size:20px; text-shadow:0 0 14px var(--glow)}
 
-  .actions{display:flex; align-items:center; gap:10px}
-  .btn{
-    border:none; cursor:pointer; background: var(--glow);
-    color:#012; font-weight:700; border-radius:10px; padding:8px 10px;
-    box-shadow:0 0 14px var(--glow);
-  }
-  .globe{
-    width:36px; height:36px; border-radius:50%;
-    overflow:hidden; border:2px solid var(--glow);
-    box-shadow:0 0 10px var(--glow);
-  }
-  .globe img{width:100%; height:100%; object-fit:cover;}
+  main{flex:1; overflow-y:auto; padding:14px;}
 
-  #chat{
-    flex:1;
-    min-height:0;
-    overflow-y:auto;
-    padding:18px 14px;
-    scroll-behavior:smooth;
-    display:flex; flex-direction:column; gap:12px;
-  }
+  /* Chat */
+  #chatPage{display:none; flex-direction:column; height:100%;}
+  #chat{flex:1; overflow-y:auto; padding:18px 14px; display:flex; flex-direction:column; gap:12px;}
   .row{display:flex; gap:10px; align-items:flex-end}
   .row.user{justify-content:flex-end}
   .row .avatar{width:36px; height:36px; border-radius:50%; flex:0 0 auto}
@@ -70,68 +60,87 @@
   }
   .row.ai .bubble{background:var(--bubble-ai); color:#fff; border-bottom-left-radius:6px}
   .row.user .bubble{background:var(--bubble-user); color:#fff; border-bottom-right-radius:6px}
+  #bar{display:flex; gap:10px; padding:12px; background:rgba(0,0,0,.25); border-top:1px solid rgba(255,255,255,.06);}
+  #prompt{flex:1; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.15); background:var(--panel); color:var(--text);}
+  #send{padding:12px 18px; border:none; border-radius:12px; cursor:pointer; font-weight:700; background:var(--glow); color:#fff; box-shadow:0 0 16px var(--glow);}
 
-  /* bar input pindah ke bawah */
-  #bar{
-    display:flex; gap:10px; padding:12px; background:rgba(0,0,0,.15);
-    border-top:1px solid rgba(255,255,255,.06);
-    margin-top:auto; /* ✅ biar selalu nempel di bawah */
-  }
-  #prompt{
-    flex:1; padding:12px 14px; border-radius:12px;
-    border:1px solid rgba(255,255,255,.15);
-    background:var(--panel); color:var(--text);
-  }
-  #send{
-    padding:12px 18px; border:none; border-radius:12px; cursor:pointer; font-weight:700;
-    background:var(--glow); color:#012; box-shadow:0 0 16px var(--glow);
-  }
+  /* Dashboard */
+  #dashboardPage{display:flex; flex-direction:column; align-items:center; justify-content:center; gap:20px; height:100%;}
+  #dashboardPage button{padding:14px 20px; border-radius:14px; border:none; font-weight:700; cursor:pointer; background:var(--glow); box-shadow:0 0 14px var(--glow); color:#fff;}
 
-  /* modal notif */
-  #notif{
-    position:fixed; top:0; left:0; width:100%; height:100%;
-    background:rgba(0,0,0,0.8); display:flex; align-items:center; justify-content:center;
-    z-index:1000;
-  }
-  #notif .box{
-    background:var(--panel); padding:20px; border-radius:14px;
-    text-align:center; box-shadow:0 0 20px var(--glow);
-    max-width:300px;
-  }
+  /* History */
+  #historyPage{display:none;}
+  .history-item{background:var(--panel); padding:10px; border-radius:10px; margin:8px 0; box-shadow:var(--shadow);}
+
+  /* Profile */
+  #profilePage{display:none; text-align:center;}
+  #profilePage img{width:100px; height:100px; border-radius:50%; margin-bottom:10px;}
+  #profilePage input{padding:10px; border-radius:10px; border:1px solid rgba(255,255,255,.15); background:var(--panel); color:var(--text); margin:5px 0;}
+
+  /* Modal notif */
+  #notif{position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,20,0.85); display:flex; align-items:center; justify-content:center; z-index:1000;}
+  #notif .box{background:var(--panel); padding:20px; border-radius:14px; text-align:center; box-shadow:0 0 20px var(--glow); max-width:300px;}
   #notif img{width:80px; height:80px; border-radius:50%; margin-bottom:12px}
-  #notif button{
-    margin-top:12px; padding:10px 16px; border:none; border-radius:10px;
-    background:var(--glow); font-weight:700; cursor:pointer;
-  }
+  #notif button{margin-top:12px; padding:10px 16px; border:none; border-radius:10px; background:var(--glow); font-weight:700; cursor:pointer; color:#fff;}
 </style>
 </head>
 <body>
+  <!-- Sidebar -->
+  <div id="sidebar">
+    <h2>☄️ KUSUMA AI</h2>
+    <button onclick="showPage('dashboardPage')">Dashboard</button>
+    <button onclick="showPage('chatPage')">Chat</button>
+    <button onclick="showPage('historyPage')">History</button>
+    <button onclick="showPage('profilePage')">Profile</button>
+  </div>
+
+  <!-- Header -->
   <header>
-    <div class="brand">
-      <div class="neon-ring"><img src="https://files.catbox.moe/v25xqs.jpg"/></div>
-      <h1>KUSUMA AI</h1>
-    </div>
-    <div class="actions">
-      <div class="globe"><img src="https://files.catbox.moe/v25xqs.jpg"/></div>
-      <button id="musicToggle" class="btn">🎵</button>
-      <button id="modeToggle" class="btn">🌙</button>
-    </div>
+    <button id="menuBtn">☰</button>
+    <h1>KUSUMA AI</h1>
   </header>
 
-  <div id="chat"></div>
+  <main>
+    <!-- Dashboard -->
+    <div id="dashboardPage">
+      <h2>🌌 Selamat Datang di Kusuma Ai</h2>
+      <button onclick="showPage('chatPage')">Mulai Chat</button>
+      <button onclick="showPage('historyPage')">Lihat History </button>
+      <button onclick="showPage('profilePage')">Profil Saya </button>
+    </div>
 
-  <!-- input bar di bawah -->
-  <div id="bar">
-    <input id="prompt" placeholder="Ketik pesan..." autocomplete="off"/>
-    <button id="send">Kirim</button>
-  </div>
+    <!-- Chat -->
+    <div id="chatPage">
+      <div id="chat"></div>
+      <div id="bar">
+        <input id="prompt" placeholder="Ketik pesan..." autocomplete="off"/>
+        <button id="send">Kirim</button>
+      </div>
+    </div>
+
+    <!-- History -->
+    <div id="historyPage">
+      <h2>Riwayat Chat 🌠</h2>
+      <div id="historyList"></div>
+    </div>
+
+    <!-- Profile -->
+    <div id="profilePage">
+      <h2>Profil Saya 👨‍🚀</h2>
+      <img id="profilePic" src="https://files.catbox.moe/55ojop.jpg"/>
+      <div>
+        <input id="profileName" placeholder="Nama Anda"/>
+        <button onclick="saveProfile()">Simpan</button>
+      </div>
+    </div>
+  </main>
 
   <!-- Notifikasi awal -->
   <div id="notif">
     <div class="box">
       <img src="https://files.catbox.moe/v25xqs.jpg" alt="AI">
       <h2>Welcome!!</h2>
-      <p>I Am Kusuma AI Created By Wijaya To Help You 🌏</p>
+      <p>I Am Kusuma AI Created To Help You 🌌</p>
       <button onclick="closeNotif()">Mulai</button>
     </div>
   </div>
@@ -140,18 +149,29 @@
 const chat=document.getElementById('chat');
 const promptEl=document.getElementById('prompt');
 const sendBtn=document.getElementById('send');
-const modeToggle=document.getElementById('modeToggle');
-const musicToggle=document.getElementById('musicToggle');
 const notif=document.getElementById('notif');
-const bgMusic=new Audio("https://files.catbox.moe/ed2aa8.mp3");
-bgMusic.loop=true;
 
 const AV_AI="https://files.catbox.moe/v25xqs.jpg";
-const AV_USER="https://files.catbox.moe/55ojop.jpg";
+let AV_USER="https://files.catbox.moe/55ojop.jpg";
+let USER_NAME="Guest";
 
+// Sidebar
+const sidebar=document.getElementById("sidebar");
+document.getElementById("menuBtn").addEventListener("click",()=>{
+  sidebar.classList.toggle("active");
+});
+
+// Ganti halaman
+function showPage(id){
+  document.querySelectorAll("main > div").forEach(p=>p.style.display="none");
+  document.getElementById(id).style.display=id==="chatPage"?"flex":"block";
+  if(id==="historyPage") renderHistory();
+  if(id==="profilePage") loadProfile();
+  sidebar.classList.remove("active");
+}
 function closeNotif(){notif.style.display='none'; promptEl.focus();}
 
-// tambah message ke chat
+// Buat bubble chat
 function rowEl(side){
   const r=document.createElement('div'); r.className='row '+side;
   const avatar=document.createElement('div'); avatar.className='avatar';
@@ -167,9 +187,10 @@ function addMessage(text,side){
   bubble.textContent=text;
   chat.appendChild(r);
   r.scrollIntoView({ behavior: "smooth", block: "end" });
+  saveHistory(text,side);
 }
 
-// kirim pesan ke API
+// Kirim pesan
 async function sendMessage(text){
   if(!text){text=promptEl.value.trim();}
   if(!text) return;
@@ -183,40 +204,52 @@ async function sendMessage(text){
       body:JSON.stringify({ text })
     });
     const data=await res.json();
-
-    let answer=(data.answer||data.output||data.result||JSON.stringify(data));
-    if(!answer || answer.trim()==="") answer="⚠️ tidak menemukan jawaban.";
-
-    answer = answer.replace(/n\\/g, "\n").replace(/\\n/g, "\n");
-
+    let answer=data.text || "⚠️ Tidak menemukan jawaban.";
+    answer = answer.replace(/\\n/g, "\n").replace(/n\\/g, "\n");
     addMessage(answer,'ai');
   }catch(err){
     addMessage("❌ Error mengambil jawaban dari server.",'ai');
   }
 }
-
 sendBtn.addEventListener('click',()=>sendMessage());
 promptEl.addEventListener('keydown',e=>{if(e.key==='Enter')sendMessage();});
 
-modeToggle.addEventListener('click',()=>{
-  document.body.classList.toggle('light');
-  modeToggle.textContent=document.body.classList.contains('light')?'🌙':'☀️';
-});
-musicToggle.addEventListener('click',()=>{
-  if(bgMusic.paused){bgMusic.play(); musicToggle.textContent="⏸️";}
-  else{bgMusic.pause(); musicToggle.textContent="🎵";}
-});
+// History pakai localStorage
+function saveHistory(text,side){
+  let history=JSON.parse(localStorage.getItem("kusuma_history")||"[]");
+  history.push({side,text,time:Date.now()});
+  localStorage.setItem("kusuma_history",JSON.stringify(history));
+}
+function renderHistory(){
+  const list=document.getElementById("historyList");
+  list.innerHTML="";
+  let history=JSON.parse(localStorage.getItem("kusuma_history")||"[]");
+  history.forEach(item=>{
+    const div=document.createElement("div");
+    div.className="history-item";
+    div.textContent=(item.side==="user"?"👤":"🤖")+": "+item.text;
+    list.appendChild(div);
+  });
+}
 
-// auto fokus supaya keyboard langsung muncul
-window.onload=()=>{
-  setTimeout(()=>{
-    promptEl.focus();
-    promptEl.click();
-  },500);
-};
-document.body.addEventListener('click',()=>{
-  promptEl.focus();
-},{once:true});
+// Profile
+function loadProfile(){
+  const saved=localStorage.getItem("kusuma_profile");
+  if(saved){
+    const obj=JSON.parse(saved);
+    USER_NAME=obj.name||"Guest";
+    AV_USER=obj.avatar||AV_USER;
+    document.getElementById("profileName").value=USER_NAME;
+    document.getElementById("profilePic").src=AV_USER;
+  }
+}
+function saveProfile(){
+  const name=document.getElementById("profileName").value||"Guest";
+  USER_NAME=name;
+  const obj={name,avatar:AV_USER};
+  localStorage.setItem("kusuma_profile",JSON.stringify(obj));
+  alert("Profil disimpan!");
+}
 </script>
 </body>
-  </html>
+</html>
