--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,20 @@
   }
   .row.ai .bubble{background:var(--bubble-ai); color:#fff; border-bottom-left-radius:6px}
   .row.user .bubble{background:var(--bubble-user); color:#fff; border-bottom-right-radius:6px}
-  #bar{display:flex; gap:10px; padding:12px; background:rgba(0,0,0,.25); border-top:1px solid rgba(255,255,255,.06);}
-  #prompt{flex:1; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.15); background:var(--panel); color:var(--text);}
+
+  /* Floating bar */
+  #bar{
+    position:sticky;
+    bottom:20px;   /* ✅ jarak dari bawah biar melayang */
+    margin:0 12px;
+    display:flex; gap:10px;
+    padding:12px;
+    background:var(--panel);
+    border:1px solid rgba(255,255,255,.15);
+    border-radius:16px;
+    box-shadow:0 4px 20px rgba(0,0,0,.5), 0 0 12px var(--glow);
+  }
+  #prompt{flex:1; padding:12px 14px; border:none; border-radius:12px; background:transparent; color:var(--text);}
   #send{padding:12px 18px; border:none; border-radius:12px; cursor:pointer; font-weight:700; background:var(--glow); color:#fff; box-shadow:0 0 16px var(--glow);}
 
   /* Dashboard */
@@ -198,7 +210,7 @@ async function sendMessage(text){
   promptEl.value=""; promptEl.focus();
 
   try{
-    const res=await fetch('/ai',{
+    const res=await fetch('/api/ai',{
       method:'POST',
       headers:{'Content-Type':'application/json'},
       body:JSON.stringify({ text })
